# coralnpu

./: BUILD.bazel  run_isp_cam_sim.sh
coralnpu_test_utils/: BUILD  core_mini_axi_interface.py  ftdi_spi_master.py  run_binary.py  rvv_cpp_util_header_generator.py
doc/: simulation.md  system_diagram.md
doc/peripherals/: dma.md
fpga/: 0002-Use-hermetic-verilator-in-fusesoc-build.patch  BUILD  chip_nexus.core  chip_verilator.core  coralnpu_soc.core  ispyocto_core.patch  main.cc  pins_nexus.xdc  vivado_general_build_settings.tcl  vivado_hook_implementation_pre.tcl  vivado_hook_synthesis_pre.tcl  vivado_hook_write_bitstream_post.tcl  vivado_setup_hooks.tcl
fpga/ip/coralnpu_chisel_subsystem_default/: coralnpu_chisel_subsystem_default.core.tpl
fpga/ip/coralnpu_chisel_subsystem_highmem/: coralnpu_chisel_subsystem_highmem.core.tpl
fpga/ip/i2c_master/: BUILD  i2c_master.core  (+3 more)
fpga/rtl/: chip_nexus.sv  chip_verilator.sv  clk_table.sv  clkgen_wrapper.sv  clkgen_xilultrascaleplus.sv  coralnpu_soc.sv
fpga/sw/: display_hal.c  display_renderer.cc  display_renderer.h  display_test.cc  isp_cam_test.c  yocto_isp_register_address.h
hdl/verilog/: ClockGate.sv  Sram.v  Sram_12ffcp_128x128.v  Sram_2048x128.v  Sram_512x128.v
rules/: coco_tb.bzl  coralnpu_v2_sim_test.bzl  repos.bzl
sw/utils/nexus_loader/: BUILD.bazel  main.cc  spi_master.cc  spi_master.h  test.cc
tests/cocotb/: BUILD  build_defs.bzl  plic_test.cc  rvv_arithmetic_cocotb_test.py  rvv_ml_ops_cocotb_test.py
toolchain/: cc_toolchain_config.bzl
utils/: run_uvm_regression.py
utils/coralnpu_soc_loader/: BUILD  loader.py  run_simulation.py  sim_test_runner.py
(+73 files in other folders)
