# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "spi_master",
    srcs = ["spi_master.cc"],
    hdrs = ["spi_master.h"],
)

cc_binary(
    name = "nexus_loader",
    srcs = ["main.cc"],
    # HAZARD: Hardcoding absolute system paths in copts breaks build
    # hermeticity and may fail in non-standard environments.
    # Consider using pkg_config or toolchain-based dependency resolution.
    copts = [
        "-I/usr/include/libftdi1",
        "-I/usr/include/libusb-1.0",
    ],
    linkopts = [
        "-lftdi1",
        "-lusb-1.0",
        "-lelf",
    ],
    deps = [
        ":spi_master",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
    ],
)

cc_test(
    name = "nexus_loader_test",
    srcs = ["test.cc"],
    deps = [
        ":spi_master",
        "@com_google_googletest//:gtest_main",
    ],
)
